Create new connection to heroku

--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
 	"homepage": "https://codeigniter.com",
 	"license": "MIT",
 	"support": {
-		"forum": "http://forum.codeigniter.com/",
-		"wiki": "https://github.com/bcit-ci/CodeIgniter/wiki",
+		"forum": "http://arixcorp.com/minierp/",
+		"wiki": "https://github.com/victorjhqampier/",
 		"slack": "https://codeigniterchat.slack.com",
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
